--- a/first_app/package.json
+++ b/first_app/package.json
@@ -37,5 +37,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-typescript-tc": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
